--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@nebular/eva-icons": "9.0.2",
     "@nebular/theme": "^9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "bootstrap": "^5.1.3",
     "eva-icons": "^1.1.2",
     "express": "^4.18.1",
     "firebase": "^9.8.3",
