--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@nebular/eva-icons": "9.0.2",
     "@nebular/theme": "^9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.1.3",
     "eva-icons": "^1.1.2",
     "express": "^4.18.1",
@@ -37,6 +38,7 @@
     "primeng": "^13.4.0",
     "rxjs": "~7.5.0",
     "typescript": "~4.6.2",
+    "uuidv4": "^6.2.13",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
