Backend - Test - Controller - Answer
Se testeo el funcionamiento de los controladores principales de answer

--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,14 @@
 			<artifactId>springdoc-openapi-webflux-ui</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
