--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.1.3",
+    "cypress": "^10.1.0",
     "eva-icons": "^1.1.2",
     "express": "^4.18.1",
     "firebase": "^9.8.3",
