--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "eva-icons": "^1.1.2",
     "express": "^4.18.1",
     "firebase": "^9.8.3",
+    "ngx-pagination": "^6.0.1",
     "ngx-toastr": "^14.3.0",
     "path": "^0.12.7",
     "primeicons": "^5.0.0",
